--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-.clip_path {
-    clip-path: polygon(50% 0%, 100% 0, 100% 90%, 75% 100%, 25% 100%, 0 90%, 0 0);
+@layer components {
+  .clip_path {
+    clip-path: polygon(
+      50% 0%,
+      100% 0,
+      100% 90%,
+      75% 100%,
+      25% 100%,
+      0 90%,
+      0 0
+    );
+  }
+  .heading {
+    @apply text-[30px] md:text-[35px] lg:text-[45px] xl:text-[50px] uppercase font-bold text-gray-800 leading-[3rem] md:leading-[4rem] text-center;
+  }
 }
