--- a/app/globals.css
+++ b/app/globals.css
@@ -18,3 +18,16 @@
     @apply text-[30px] md:text-[35px] lg:text-[45px] xl:text-[50px] uppercase font-bold text-gray-800 leading-[3rem] md:leading-[4rem] text-center;
   }
 }
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+}
+
+input[type="time"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator::after {
+  filter: invert(1);
+}
+
